<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".DetailsScreen">

    <ImageView
        android:id="@+id/iv_back"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_share"
        android:src="@drawable/ic_share"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_more"
        android:src="@drawable/ic_more"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/iv_back"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/roundCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:elevation="0dp"
        app:cardCornerRadius="200dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_bbc"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription,HardcodedText" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_bbc_news"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/details_bbc_news"
        app:layout_constraintLeft_toRightOf="@id/roundCardView"
        app:layout_constraintTop_toTopOf="@id/roundCardView" />

    <TextView
        android:id="@+id/tv_last_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppins"
        android:text="@string/details_last_time"
        android:textSize="14sp"
        android:textColor="#4E4B66"
        app:layout_constraintLeft_toRightOf="@id/roundCardView"
        app:layout_constraintTop_toTopOf="@id/roundCardView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_bg"
        android:backgroundTint="#1877F2"
        android:text="@string/details_following"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/roundCardView"
        tools:ignore="TextContrastCheck" />
    <ImageView
        android:id="@+id/iv_content_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@mipmap/ic_content_img_foreground"
        android:scaleType="centerCrop"
        android:layout_marginTop="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roundCardView"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_country_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/details_country_name"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_content_img"
        tools:ignore="TextContrastCheck" />
    <TextView
        android:id="@+id/tv_content_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_content_title"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_content_img"
        />
    <TextView
        android:id="@+id/tv_content_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_content_description"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="#4E4B66"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_content_title"
        tools:ignore="VisualLintLongText" />
    <ImageView
        android:id="@+id/iv_like"
        android:src="@drawable/ic_like"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_K_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textSize="20sp"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="4dp"
        android:text="@string/details_K"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/iv_like"
        />

    <ImageView
        android:id="@+id/iv_comment"
        android:src="@drawable/ic_comment"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_K_like"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_K_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textSize="20sp"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="4dp"
        android:text="@string/details_K_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/iv_comment"
        />

    <ImageView
        android:id="@+id/iv_bookmark"
        android:src="@drawable/ic_flag"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>